Add icons&compinfo (#1126)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -96,3 +96,79 @@ _4910:
 
 apatch:
   - me.garfieldhan.apatch.next/me.bmax.apatch.ui.MainActivity
+
+aladdin_ebook:
+  - kr.co.aladin.ebook/kr.co.aladin.ebook.SplashActivity
+
+a_twosome_place:
+  - com.cj.twosome/com.cj.twosome.Activity.Common.TsIntroActivity
+
+cosmo_the_gate:
+  - com.modhaus.cosmo/com.modhaus.cosmo.MainActivity
+
+hyundai_card:
+  - com.hyundaicard.appcard/com.hyundaicard.appcard.app.intro.LoadingForNormalActivity
+
+kakao_taxi:
+  - com.kakao.taxi/com.kakao.t.presentation.launcher.LauncherActivity
+
+kb_pay:
+  - com.kbcard.cxh.appcard/com.kbcard.cxh.appcard.screen.intro.LaunchControlActivity
+
+wongi_weather:
+  - wongi.weather/wongi.weather.activity.MainActivity
+
+woowa_brothers_delivery:
+  - com.sampleapp/com.baemin.presentation.ui.RouterActivity
+
+x_saver:
+  - twittervideodownloader.twitter.videoindir.savegif.twdown/com.atlasv.android.downloader.app.x.feature.splash.SplashActivity
+
+wooribank:
+  - com.wooricard.smartapp/com.wooricard.smartapp.InAppUpdateActivity
+
+atba:
+  - com.torbox.atba/com.torbox.atba.MainActivity
+
+grok:
+  - ai.x.grok/ai.x.grok.main.GrokActivity
+
+mistral_ai:
+  - ai.mistral.chat/ai.mistral.chat.MainActivity
+
+polito_students:
+  - it.polito.students/it.polito.students.MainActivity
+
+serializd:
+  - com.serializdmobile/com.serializdmobile.MainActivity
+
+superimage_pro:
+  - com.zhenxiang.superimage.pro/com.zhenxiang.superimage.MainActivity
+
+utac:
+  - dev.ech0.torbox.multiplatform/dev.ech0.torbox.multiplatform.MainActivity
+
+mi_movistar:
+  - com.services.movistar.ar/com.services.movistar.ar.MainActivity
+  - cl.movistar.android/cl.movistar.android.MainActivity
+
+uniqlo:
+  - com.uniqlo.my.catalogue/com.uniqlo.ja.catalogue.view.mobile.startup.StartupActivity
+
+fedilab:
+  - app.fedilab.android/app.fedilab.android.activities.MainActivity.Bubbles
+
+ayugram:
+  - com.radolyn.ayugram/com.exteragram.messenger.Dsgn480Icon
+
+nekogram:
+  - tw.nekomimi.nekogram/org.telegram.messenger.OldSchoolIcon
+
+gta_san_andreas:
+  - com.rockstargames.gtasa/com.rockstargames.gtasa.DownloaderActivity
+
+yokai:
+  - eu.kanade.tachiyomi.nightlyYokai/eu.kanade.tachiyomi.ui.main.MainActivity
+
+calculator:
+  - com.revengeos.calculator/com.android.calculator2.Calculator
