MadeEasy Icons & CompInfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+MadeEasyOTS :
+  - com.madeeasy.easy/com.madeeasy.easy.Activity.Splash_Activity
+
+MadeEasy :
+  - com.madeeasy.prime.app/com.madeeasy.prime.app.ui.activities.SplashActivity
