Add Icons & Comp info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,6 @@ MadeEasyOTS :
 
 MadeEasy :
   - com.madeeasy.prime.app/com.madeeasy.prime.app.ui.activities.SplashActivity
+
+vlcBug :
+  - org.videolan.vlc/org.videolan.vlc.gui.SendCrashActivity
