--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,11 +13,11 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
-MadeEasyOTS :
+made_easy_ots:
   - com.madeeasy.easy/com.madeeasy.easy.Activity.Splash_Activity
 
-MadeEasy :
+made_easy:
   - com.madeeasy.prime.app/com.madeeasy.prime.app.ui.activities.SplashActivity
 
-vlcBug :
+vlc_bug:
   - org.videolan.vlc/org.videolan.vlc.gui.SendCrashActivity
