Add icons and Comp info (#1127)
* Good Lock appfilter update

* Good Lock appfilter update

* Add files via upload

* Added Notein Icons

* Update appfilter.xml

* Update appfilter.xml

* Notein Icons

* Notein Icons

* Update icons.yml

* Icon Update for Notein

* Update icons.yml

* Updated Icon for Notein

* VLC Nightly/Debug Icons

* Small icon updates

* redomi

* Redomi appfilter update

* MadeEasy Icons & CompInfo

* Add Icons & Comp info

* small fixes

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,12 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+made_easy_ots:
+  - com.madeeasy.easy/com.madeeasy.easy.Activity.Splash_Activity
+
+made_easy:
+  - com.madeeasy.prime.app/com.madeeasy.prime.app.ui.activities.SplashActivity
+
+vlc_bug:
+  - org.videolan.vlc/org.videolan.vlc.gui.SendCrashActivity
