add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,33 @@ made_easy:
 
 vlc_bug:
   - org.videolan.vlc/org.videolan.vlc.gui.SendCrashActivity
+
+drogaria_arujo:
+  - com.araujo.araujoapp/com.araujo.araujo_app.MainActivity
+
+iliturgia:
+  - com.iliturgia/com.iliturgia.IliturgiaActivity
+
+norton_password_manager:
+  - com.symantec.mobile.idsafe/com.symantec.mobile.idsafe.ui.EntryActivity
+
+norton_vpn:
+  - com.symantec.securewifi/com.norton.n360.SplashActivity
+
+pocket_terco:
+  - com.edsonteco.pocketterco/com.edsonteco.pocketterco.activity.SplashActivity
+
+raia:
+  - br.com.drogaraia/br.com.raiadrogasil.MainActivity
+
+rosario:
+  - com.hozana.rosario/com.hozana.rosario.MainActivity
+
+upfoto:
+  - ai.photo.enhancer.photoclear/ai.photo.enhancer.photoclear.RLaunch
+
+video_audio_remover:
+  - com.jayazone.video.audio.remover/com.jayazone.video.audio.remover.DummyActivity
+
+video_downloader_gif_saver:
+  - twittervideosaver.twittervideodownloader.twimate.savetwittergif/twitter.downloader.twitterdownloader.activity.SplashActivity
