--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -51,3 +51,6 @@ video_audio_remover:
 
 video_downloader_gif_saver:
   - twittervideosaver.twittervideodownloader.twimate.savetwittergif/twitter.downloader.twitterdownloader.activity.SplashActivity
+
+hide_my_applist:
+  - com.google.android.hmal/com.google.android.hmal.MainActivityLauncher
