icon rename: AOSP Mods -> Pixel Xpert

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -54,3 +54,7 @@ video_downloader_gif_saver:
 
 hide_my_applist:
   - com.google.android.hmal/com.google.android.hmal.MainActivityLauncher
+
+pixel_xpert:
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityAlternateIcon
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityAlternateIcon
