new icon: AKBANK

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -58,3 +58,6 @@ hide_my_applist:
 pixel_xpert:
   - sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityAlternateIcon
   - sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityAlternateIcon
+
+akbank:
+  - com.akbank.android.apps.akbank_direkt/com.akbank.feature.login.splash.presentation.SplashActivity
