icon update: My MTS

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -131,3 +131,6 @@ arc_search:
 
 nykaa:
   - com.fsn.nykaa/com.fsn.nykaa.SplashScreenActivityV2
+
+mts_my:
+  - ru.mts.mymts/ru.mts.splash.ActivitySplash
