--- a/.github/workflows/check_conflicts.yml
+++ b/.github/workflows/check_conflicts.yml
@@ -20,10 +20,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+        cache: pip
+
     - name: Install dependencies
       run: |
-        sudo pip install -r requirements.txt
+        python -m pip install -r requirements.txt
 
-    - name: Add new icons in dry mode
+    - name: Add icons
       run: |
         python -u add_icons_wrapper.py
