--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -54,3 +54,83 @@ video_downloader_gif_saver:
 
 hide_my_applist:
   - com.google.android.hmal/com.google.android.hmal.MainActivityLauncher
+
+pixel_xpert:
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityAlternateIcon
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityAlternateIcon
+
+akbank:
+  - com.akbank.android.apps.akbank_direkt/com.akbank.feature.login.splash.presentation.SplashActivity
+
+apo_discounter:
+  - de.apodiscounter.androidphone/de.apodiscounter.androidphone.MainActivity
+
+momo:
+  - com.mservice.momotransfer/vn.momo.platform.entry.MainActivity
+
+weawow:
+  - com.weawow/com.weawow.SnowIcon
+
+weather:
+  - fr.meteo/fr.meteo.activity.SplashscreenActivity
+
+_500px:
+  - com.fivehundredpx.viewer/com.fivehundredpx.viewer.RootActivity
+
+mi_app_vault:
+  - com.mi.android.globalminusscreen/com.mi.android.globalminusscreen.tab.MainActivity_icon_31
+
+find_my_kids:
+  - org.findmykids.app/org.findmykids.app.activityes.launcher.LauncherActivity
+
+color_picker:
+  - ua.com.compose.colorpicker.camera.image/ua.com.compose.MainActivity
+
+gosuslugi:
+  - ru.rostel/ru.minsvyaz.coreproject.LauncherActivity
+
+discord:
+  - com.discord/com.discord.main.MainMushroom
+  - com.discord/com.discord.main.MainSunset
+
+instagram:
+  - com.instafel.android/com.instagram.android.activity.MainTabActivity
+
+youtube:
+  - com.gold.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+zepto:
+  - com.zeptoconsumerapp/com.zeptoconsumerapp.APP_ICON_CAMPAIGN_2
+
+google_arts_and_culture:
+  - com.google.android.apps.cultural/com.google.android.apps.cultural.flutter.HomeFlutterActivity
+
+cashrewards:
+  - com.cashrewards/com.cashrewards.MainActivityDefault
+
+seabank:
+  - id.co.bankbkemobile.digitalbank/com.shopee.bke.digitalbank.ui.MainActivity
+
+randonautica:
+  - com.randonautica.app/com.randonautica.app.MainActivity
+
+amaysim:
+  - au.com.amaysim.android/au.com.amaysim.poc.android.activities.MainActivity
+
+cpu_info:
+  - com.kgurgul.cpuinfo/com.kgurgul.cpuinfo.HostActivity
+
+smash_hit:
+  - com.mediocre.smashhit/com.mediocre.smashhit.MainActivity
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity.IconThree
+
+nykaa:
+  - com.fsn.nykaa/com.fsn.nykaa.SplashScreenActivityV2
+
+mts_my:
+  - ru.mts.mymts/ru.mts.splash.ActivitySplash
+
+kontur_talk:
+  - ru.kontur.talk/ru.kontur.talk.MainActivity
