add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,12 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+jersey_mikes:
+  - com.seattleapplab.jerseymikes/com.jerseymikes.welcome.WelcomeActivity
+
+safeway_deals:
+  - com.safeway.client.android.safeway/com.safeway.mcommerce.android.SplashScreen
+
+jack_in_the_box_order_food:
+  - com.jackintheboxinc.JackMobileApp/com.jackinthebox.MainActivity
