--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,24 @@ safeway_deals:
 
 jack_in_the_box_order_food:
   - com.jackintheboxinc.JackMobileApp/com.jackinthebox.MainActivity
+
+foodyou:
+  - com.maksimowiczm.foodyou/com.maksimowiczm.foodyou.infrastructure.android.FoodYouMainActivity
+
+islandbanki:
+  - is.islandsbanki.creditcard/is.islandsbanki.creditcard.ui.entry.SplashActivity
+
+netbird_vpn:
+  - io.netbird.client/io.netbird.client.LaunchActivity
+
+root_checker:
+  - com.joeykrim.rootcheck/com.joeykrim.rootcheck.MainActivity
+
+waybetter:
+  - com.waybetter.app/com.waybetter.MainActivity
+
+willhaben:
+  - at.willhaben/at.willhaben.MainActivity
+
+abc_news:
+  - android.AbcApplication/au.net.abc.apollo.futurenews.MainActivity
