--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,15 @@ willhaben:
 
 abc_news:
   - android.AbcApplication/au.net.abc.apollo.futurenews.MainActivity
+
+capcut:
+  - cc.capcut.clone/com.vega.main.MainActivity
+
+infinity:
+  - ml.docilealligator.infinityforreddit.plus2/ml.docilealligator.infinityforreddit.activities.MainActivity
+
+edenred:
+  - com.edenred.mobiletr/com.edenred.login.ui.activity.LoginActivity
+
+heliboard:
+  - helium314.keyboard/helium314.keyboard.settings.SettingsActivity
