Add icons&compinfo (#1130)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,45 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+jersey_mikes:
+  - com.seattleapplab.jerseymikes/com.jerseymikes.welcome.WelcomeActivity
+
+safeway_deals:
+  - com.safeway.client.android.safeway/com.safeway.mcommerce.android.SplashScreen
+
+jack_in_the_box_order_food:
+  - com.jackintheboxinc.JackMobileApp/com.jackinthebox.MainActivity
+
+foodyou:
+  - com.maksimowiczm.foodyou/com.maksimowiczm.foodyou.infrastructure.android.FoodYouMainActivity
+
+islandbanki:
+  - is.islandsbanki.creditcard/is.islandsbanki.creditcard.ui.entry.SplashActivity
+
+netbird_vpn:
+  - io.netbird.client/io.netbird.client.LaunchActivity
+
+root_checker:
+  - com.joeykrim.rootcheck/com.joeykrim.rootcheck.MainActivity
+
+waybetter:
+  - com.waybetter.app/com.waybetter.MainActivity
+
+willhaben:
+  - at.willhaben/at.willhaben.MainActivity
+
+abc_news:
+  - android.AbcApplication/au.net.abc.apollo.futurenews.MainActivity
+
+capcut:
+  - cc.capcut.clone/com.vega.main.MainActivity
+
+infinity:
+  - ml.docilealligator.infinityforreddit.plus2/ml.docilealligator.infinityforreddit.activities.MainActivity
+
+edenred:
+  - com.edenred.mobiletr/com.edenred.login.ui.activity.LoginActivity
+
+heliboard:
+  - helium314.keyboard/helium314.keyboard.settings.SettingsActivity
