Add icon for Aftenposten

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -54,3 +54,6 @@ edenred:
 
 heliboard:
   - helium314.keyboard/helium314.keyboard.settings.SettingsActivity
+
+aftenposten:
+  - no.cita/com.schibsted.publishing.hermes.new_ui.MainActivity
