app icons and compinfo update

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,6 @@ heliboard:
 
 aftenposten:
   - no.cita/com.schibsted.publishing.hermes.new_ui.MainActivity
+
+railwire_subscriber:
+  - com.railtel.railwire.subscriber/com.railtel.railwire.subscriber.MainActivity
