changes as asked

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -60,3 +60,7 @@ aftenposten:
 
 railwire_subscriber:
   - com.railtel.railwire.subscriber/com.railtel.railwire.subscriber.MainActivity
+
+phone_pe:
+  - com.phonepe.app/com.phonepe.app.launch.core.main.ui.MainActivity
+  - com.phonepe.app/com.phonepe.app.v4.nativeapps.splash.Navigator_SplashActivity
