--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,10 @@ heliboard:
 
 aftenposten:
   - no.cita/com.schibsted.publishing.hermes.new_ui.MainActivity
+
+railwire_subscriber:
+  - com.railtel.railwire.subscriber/com.railtel.railwire.subscriber.MainActivity
+
+phone_pe:
+  - com.phonepe.app/com.phonepe.app.launch.core.main.ui.MainActivity
+  - com.phonepe.app/com.phonepe.app.v4.nativeapps.splash.Navigator_SplashActivity
