add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,24 @@ railwire_subscriber:
 phone_pe:
   - com.phonepe.app/com.phonepe.app.launch.core.main.ui.MainActivity
   - com.phonepe.app/com.phonepe.app.v4.nativeapps.splash.Navigator_SplashActivity
+
+last_war_survival_game:
+  - com.fun.lastwar.gp/com.im30.aps.debug.UnityPlayerActivityCustom
+
+lords_mobile_kingdom_wars:
+  - com.igg.android.lordsmobile/com.igg.iggsdkbusiness.IGGSDKPlugin
+
+no_humanity:
+  - com.sweatychair.lastofhumanity/com.unity3d.player.UnityPlayerActivity
+
+pocket_chess:
+  - com.dkxqzbfkjt.pocketchess/com.unity3d.player.UnityPlayerActivity
+
+studyge:
+  - com.mileoDev.geography/com.lemioDev.StudyGe.MainActivity
+
+superstar_jypnation:
+  - com.dalcomsoft.ss.jyp/com.google.firebase.MessagingUnityPlayerActivity
+
+_007_sport:
+  - com.sport007.app.android/com.fanting.sport007.SplashActivity
