--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -85,3 +85,6 @@ superstar_jypnation:
 
 _007_sport:
   - com.sport007.app.android/com.fanting.sport007.SplashActivity
+
+auto_clicker:
+  - uit.quocnguyen.autoclicker/uit.quocnguyen.autoclicker.activities.IntroduceActivity
