--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,3 +88,24 @@ _007_sport:
 
 auto_clicker:
   - uit.quocnguyen.autoclicker/uit.quocnguyen.autoclicker.activities.IntroduceActivity
+
+bridge_wallet:
+  - com.mtpelerin.bridge/com.mtpelerin.bridge.MainActivity
+
+kagi_search:
+  - com.kagi.search/com.kagi.search.presentation.webexperience.WebExperienceActivity
+
+ncba_now:
+  - com.nicbank.android/com.nicbank.android.ActivationLaunchLogin.TestActivity
+
+otterai:
+  - com.aisense.otter/com.aisense.otter.ui.activity.SplashActivity
+
+owlet_care:
+  - com.owletcare.owletcare/com.owletcare.owletcare.SplashActivity
+
+pix_material_you:
+  - com.pashapuma.pix.material.you.iconpack/com.pashapuma.pix.material.you.iconpack.activities.MainActivity
+
+random_number_generator:
+  - ru.uxapps.random/ru.uxapps.random.MainActivity
