--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -109,3 +109,45 @@ pix_material_you:
 
 random_number_generator:
   - ru.uxapps.random/ru.uxapps.random.MainActivity
+
+pdf_reader:
+  - foundation.e.pdfviewer/com.gitlab.mudlej.MjPdfReader.ui.main.MainActivity
+
+fallout_shelter:
+  - com.bethsoft.falloutshelter/com.bhvr.MainActivity
+
+hypatia:
+  - org.maintainteam.hypatia/us.spotco.malwarescanner.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.StreakSaverLauncher
+
+finamp:
+  - com.unicornsonlsd.finamp/com.unicornsonlsd.finamp.MainActivity
+
+google_pixel_studio:
+  - com.google.android.apps.pixel.creativeassistant/com.google.android.apps.pixel.merlin.tiktok.app.MainActivity
+
+ap_mobile:
+  - mnn.Android/com.apnews.app.ui.splash.AppChecksActivity
+
+stremio:
+  - com.stremio.one/com.stremio.android.MainActivity
+
+sharik:
+  - dev.monora.sharik/dev.monora.sharik.MainActivity
+
+right_contacts:
+  - com.goodwy.contacts/com.goodwy.contacts.activities.SplashActivity.Original
+
+groupon:
+  - com.groupon/com.groupon.home.main.activities.Carousel
+
+loklok:
+  - com.artem.scotepio/com.artem.scotepio.module_home.HomeActivityNew
+
+android_system_webview:
+  - com.google.android.webview.beta/org.chromium.android_webview.devui.LauncherActivity
+
+terminal:
+  - com.android.virtualization.terminal/com.android.virtualization.terminal.MainActivity
