Add icons&compinfo (#1135)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,3 +88,66 @@ _007_sport:
 
 auto_clicker:
   - uit.quocnguyen.autoclicker/uit.quocnguyen.autoclicker.activities.IntroduceActivity
+
+bridge_wallet:
+  - com.mtpelerin.bridge/com.mtpelerin.bridge.MainActivity
+
+kagi_search:
+  - com.kagi.search/com.kagi.search.presentation.webexperience.WebExperienceActivity
+
+ncba_now:
+  - com.nicbank.android/com.nicbank.android.ActivationLaunchLogin.TestActivity
+
+otterai:
+  - com.aisense.otter/com.aisense.otter.ui.activity.SplashActivity
+
+owlet_care:
+  - com.owletcare.owletcare/com.owletcare.owletcare.SplashActivity
+
+pix_material_you:
+  - com.pashapuma.pix.material.you.iconpack/com.pashapuma.pix.material.you.iconpack.activities.MainActivity
+
+random_number_generator:
+  - ru.uxapps.random/ru.uxapps.random.MainActivity
+
+pdf_reader:
+  - foundation.e.pdfviewer/com.gitlab.mudlej.MjPdfReader.ui.main.MainActivity
+
+fallout_shelter:
+  - com.bethsoft.falloutshelter/com.bhvr.MainActivity
+
+hypatia:
+  - org.maintainteam.hypatia/us.spotco.malwarescanner.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.StreakSaverLauncher
+
+finamp:
+  - com.unicornsonlsd.finamp/com.unicornsonlsd.finamp.MainActivity
+
+google_pixel_studio:
+  - com.google.android.apps.pixel.creativeassistant/com.google.android.apps.pixel.merlin.tiktok.app.MainActivity
+
+ap_mobile:
+  - mnn.Android/com.apnews.app.ui.splash.AppChecksActivity
+
+stremio:
+  - com.stremio.one/com.stremio.android.MainActivity
+
+sharik:
+  - dev.monora.sharik/dev.monora.sharik.MainActivity
+
+right_contacts:
+  - com.goodwy.contacts/com.goodwy.contacts.activities.SplashActivity.Original
+
+groupon:
+  - com.groupon/com.groupon.home.main.activities.Carousel
+
+loklok:
+  - com.artem.scotepio/com.artem.scotepio.module_home.HomeActivityNew
+
+android_system_webview:
+  - com.google.android.webview.beta/org.chromium.android_webview.devui.LauncherActivity
+
+terminal:
+  - com.android.virtualization.terminal/com.android.virtualization.terminal.MainActivity
