new compinfo: Vkusvill

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+vkusvill:
+  - ru.vkusvill/ru.vkusvill.ui.MainActivity
