--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,6 @@ vkusvill:
 
 simpler:
   - ru.zengalt.simpler/ru.zengalt.simpler.IconPremium
+
+tasty_coffee:
+  - com.tastycoffee.shop/com.tastycoffee.shop.MainActivity
