new compinfo: Bluetooth

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,7 @@ simpler:
 
 tasty_coffee:
   - com.tastycoffee.shop/com.tastycoffee.shop.MainActivity
+
+bluetooth:
+  - com.google.android.bluetooth/com.android.bluetooth.BluetoothPrefs
+  - com.android.bluetooth/com.android.bluetooth.BluetoothPrefs
