new compinfo: Printer

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -25,3 +25,6 @@ tasty_coffee:
 bluetooth:
   - com.google.android.bluetooth/com.android.bluetooth.BluetoothPrefs
   - com.android.bluetooth/com.android.bluetooth.BluetoothPrefs
+
+printer:
+  - com.android.printspooler/com.android.printspooler.ui.PrintActivity
