--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,19 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+vkusvill:
+  - ru.vkusvill/ru.vkusvill.ui.MainActivity
+
+simpler:
+  - ru.zengalt.simpler/ru.zengalt.simpler.IconPremium
+
+tasty_coffee:
+  - com.tastycoffee.shop/com.tastycoffee.shop.MainActivity
+
+bluetooth:
+  - com.google.android.bluetooth/com.android.bluetooth.BluetoothPrefs
+  - com.android.bluetooth/com.android.bluetooth.BluetoothPrefs
+
+printer:
+  - com.android.printspooler/com.android.printspooler.ui.PrintActivity
