add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,3 +28,9 @@ bluetooth:
 
 printer:
   - com.android.printspooler/com.android.printspooler.ui.PrintActivity
+
+autozen:
+  -  com.zenthek.autozen/app.ui.main.ActivitySplashScreen
+
+sennheiser_smart_control_plus:
+  - com.sonova.chb.control/com.sonova.chb.control.MainActivity
