--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -76,3 +76,21 @@ webos_dev_manager:
 
 zappka:
   - pl.zabka.apb2c/pl.zabka.apb2c.ui.ZappkaActivity
+
+shell:
+  - com.shell.sitibv.shellgoplusindia/com.shell.crm.common.views.activities.SplashActivity
+
+aldi_uk:
+  - de.apptiv.business.android.aldi_us/com.aldi.ui.launch.LaunchScreenActivity
+
+nordea:
+  - dk.nordea.mobilebank/com.nordea.mobilebank.start.SplashscreenActivity
+
+geometry_dash:
+  - com.robtopx.geometryjump/com.fiveplay.mod.RMS.Recovery
+
+echoir:
+  - app.echoirx/app.echoirx.MainActivity
+
+neo_backup:
+  - com.machiav3lli.backup/com.machiav3lli.backup.ui.activities.NeoActivity
