Add icons&compinfo (#1137)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,3 +28,69 @@ bluetooth:
 
 printer:
   - com.android.printspooler/com.android.printspooler.ui.PrintActivity
+
+autozen:
+  -  com.zenthek.autozen/app.ui.main.ActivitySplashScreen
+
+sennheiser_smart_control_plus:
+  - com.sonova.chb.control/com.sonova.chb.control.MainActivity
+
+buffalo_wild_wings_ordering:
+  - com.buffalowildwings.blazinrewards/com.inspirebrandsapp.LaunchActivity
+
+devbytes:
+  - com.candelalabs.devbytes/com.candelalabs.devbytes.ui.main.view.activities.MainActivity
+
+esso:
+  - com.firstdata.mpl/com.firstdata.mpl.MainActivity
+
+john_lewis_partners:
+  - com.johnlewis.android/com.johnlewis.android.splash.DefaultSplashActivityAlias
+
+kiwi:
+  - in.gokiwi.kiwitpap/in.gokiwi.kiwitpap.MainActivity
+
+myaudi:
+  - de.myaudi.mobile.assistant/de.audi.onetouch.MainActivity
+
+nexi_pay:
+  - it.icbpi.mobile/it.icbpi.mobile.SplashActivity
+
+rakuten_card:
+  - jp.co.rakuten.kc.rakutencardapp.android/jp.co.rakuten.kc.rakutencardapp.android.common.view.MainActivity
+
+sacred_music:
+  - org.lds.ldsmusic/org.lds.ldsmusic.ux.startup.StartupActivity
+
+simpl:
+  - com.simpl.android/com.simpl.android.MainActivity
+
+timvision:
+  - it.telecomitalia.cubovision/com.canal.ui.mobile.MainActivity
+
+ubs_access:
+  - com.ubs.swidK2Y.android/com.ubs.swidK2Y.android.ui.activities.start.StartActivity
+
+webos_dev_manager:
+  - org.webosbrew.devman/org.webosbrew.devman.MainActivity
+
+zappka:
+  - pl.zabka.apb2c/pl.zabka.apb2c.ui.ZappkaActivity
+
+shell:
+  - com.shell.sitibv.shellgoplusindia/com.shell.crm.common.views.activities.SplashActivity
+
+aldi_uk:
+  - de.apptiv.business.android.aldi_us/com.aldi.ui.launch.LaunchScreenActivity
+
+nordea:
+  - dk.nordea.mobilebank/com.nordea.mobilebank.start.SplashscreenActivity
+
+geometry_dash:
+  - com.robtopx.geometryjump/com.fiveplay.mod.RMS.Recovery
+
+echoir:
+  - app.echoirx/app.echoirx.MainActivity
+
+neo_backup:
+  - com.machiav3lli.backup/com.machiav3lli.backup.ui.activities.NeoActivity
