--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -151,3 +151,18 @@ virtual_master:
 
 weyay:
   - com.nbk.weyay/com.nbk.weyay.celebration
+
+shell:
+  - com.shell.sitibv.motorist.america/com.mobgen.fireblade.presentation.splash.SplashActivity
+
+youtube_revanced_alt_7:
+  - com.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+eu_login:
+  - eu.europa.ec.ecas/eu.europa.ec.ecas.main.ui.screen.menu.MenuActivity
+
+stoic_mental_healt_routine:
+  - com.stoicroutine.stoic/com.stoicroutine.stoic.v2.feature.SplashActivity
+
+zdf_mediathek:
+  - com.zdf.android.mediathek/com.zdf.android.mediathek.handheld.MainActivity
