--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,6 @@ minimo_launcher:
 
 readeck_app:
   - de.readeckapp/de.readeckapp.MainActivity
+
+notification_light_for_samsung:
+  - com.jamworks.notificationlightled/com.jamworks.notificationlightled.SettingsHome
