--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+delta_hotspot:
+  - dev.shadoe.delta/dev.shadoe.delta.MainActivity
+
+fake_traveler:
+  - cl.coders.faketraveler/cl.coders.faketraveler.MainActivity
+
+find_my_ip:
+  - com.maksimowiczm.findmyip/com.maksimowiczm.findmyip.infrastructure.android.MainActivity
+
+karui_todo:
+  - io.github.ronynn.karui/io.github.ronynn.karui.MainActivity
+
+minimo_launcher:
+  - com.minimo.launcher/com.minimo.launcher.ui.main.MainActivity
+
+readeck_app:
+  - de.readeckapp/de.readeckapp.MainActivity
+
+notification_light_for_samsung:
+  - com.jamworks.notificationlightled/com.jamworks.notificationlightled.SettingsHome
