--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,20 @@ readeck_app:
 
 notification_light_for_samsung:
   - com.jamworks.notificationlightled/com.jamworks.notificationlightled.SettingsHome
+
+plex:
+  - com.plexapp.android/tv.plex.app.MainActivity
+
+marshall:
+  - com.zoundindustries.marshallbt/com.zoundindustries.marshallbt.ui.activity.DeviceSettingsActivity
+
+moj_orange:
+  - pl.orange.mojeorange/crc64292f37a41a990363.SplashScreenWithAnimationView
+
+printer:
+  - com.android.bips/com.android.bips.ImagePrintActivity
+  - com.android.bips/com.android.bips.PdfPrintActivity
+  - com.android.bips/com.android.bips.ui.AddPrinterActivity
+  - com.android.bips/com.android.bips.ui.MoreOptionsActivity
+  - com.android.printspooler/com.android.printspooler.ui.AddPrinterActivity
+  - com.android.printspooler/com.android.printspooler.ui.SelectPrinterActivity
