icon link: Android 12 Extensions -> IAmNotADeveloper

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -50,3 +50,6 @@ printer:
   - com.android.bips/com.android.bips.ui.MoreOptionsActivity
   - com.android.printspooler/com.android.printspooler.ui.AddPrinterActivity
   - com.android.printspooler/com.android.printspooler.ui.SelectPrinterActivity
+
+android_12_extensions:
+  - xyz.xfqlittlefan.notdeveloper/xyz.xfqlittlefan.notdeveloper.ui.activities.MainActivity
