--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -69,3 +69,24 @@ redfin:
 
 zillow:
   - com.zillow.android.zillowmap/com.zillow.android.splashscreen.SplashScreenActivity
+
+abercrombie:
+  - com.abercrombie.abercrombie/com.abercrombie.abercrombie.ui.splash.SplashScreenActivity
+
+cnbc:
+  - com.cnbc.client/com.cnbc.client.activities.SplashActivity
+
+ecoflow:
+  - com.ecoflow/com.ecoflow.iot.ui.activity.SplashActivity
+
+eurospin:
+  - it.eurospin.mobileapp/it.eurospin.mobileapp.MainActivity
+
+npm_mobile:
+  - com.manan.npm_phone_app/com.manan.npm_phone_app.MainActivity
+
+rotation:
+  - com.pranavpandey.rotation/com.pranavpandey.rotation.activity.SplashActivity
+
+tripeaks_neue:
+  - io.github.mimoguz.tripeaksneue/io.github.mimoguz.tripeaksneue.MainActivity
