--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,15 @@ rotation:
 
 tripeaks_neue:
   - io.github.mimoguz.tripeaksneue/io.github.mimoguz.tripeaksneue.MainActivity
+
+ente:
+  - io.ente.photos/io.ente.photos.IconGreen
+
+nowtv:
+  - com.nowtv.it/com.nowtv.startup.StartupActivity
+
+trail_sense:
+  - com.kylecorry.trail_sense.dev/com.kylecorry.trail_sense.main.MainActivity
+
+cake_monero:
+  - com.monero.app/com.cakewallet.cake_wallet.MainActivity
