Add icons&compinfo (#1141)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,93 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+brasil_paralelo:
+  - com.brasilparalelo.athena/com.brasilparalelo.athena.MainActivity
+
+clube_supernosso:
+  - br.com.supernosso.mauricio.ClubeSupernosso/br.com.supernosso.mauricio.ClubeSupernosso.MainActivity
+
+daily_affirmations_mirror:
+  - com.nixgames.motivation.mirror/com.nixgames.motivation.mirror.ui.splash.SplashActivity
+
+gazeta_do_povo:
+  - br.com.gazetadopovo.appwvgp/br.com.gazetadopovo.appwvgp.ui.activity.MainActivity
+
+liturgia_diaria:
+  - com.cancaonova.liturgia/com.cancaonova.liturgia.MainActivity
+
+minha_claro_residencial:
+  - br.com.net.netapp/br.com.net.netapp.presentation.view.activity.SplashActivity
+
+mod_pizza:
+  - com.punchh.mod/com.koala.mobile.MainActivity
+
+odontoprev:
+  - br.com.beneficiario.odontoprev/br.com.beneficiario.odontoprev.MainActivity
+
+pizza_point:
+  - com.neemo.pizzapoint/com.neemo.pizzapoint.PizzaPointActivity
+
+portuguese_dictionary_offline:
+  - livio.pack.lang.pt_BR/livio.pack.lang.pt_BR.DictionaryView
+
+rentcafe_resident:
+  - com.yardi.systems.rentcafe.resident/com.yardi.systems.rentcafe.resident.views.LoginActivity
+
+revista_oeste:
+  - com.revistaoeste.app/com.revistaoeste.app.MainActivity
+
+the_holy_rosary:
+  - app.rosario.it/app.rosario.it.main
+
+tweet2pic:
+  - org.hackesta.tweet2pic/org.hackesta.tweet2pic.MainActivity
+
+unimed_bh:
+  - unimedbh.UnimedBH/unimedbh.UnimedBH.MainActivity
+
+voli:
+  - com.urbandroid.voli/com.urbandroid.voli.MainActivity
+
+youcat_daily:
+  - com.youcat.daily/com.youcat.daily.MainActivity
+
+redfin:
+  - com.redfin.android/com.redfin.android.core.activity.launch.DefaultLaunchActivity
+
+zillow:
+  - com.zillow.android.zillowmap/com.zillow.android.splashscreen.SplashScreenActivity
+
+abercrombie:
+  - com.abercrombie.abercrombie/com.abercrombie.abercrombie.ui.splash.SplashScreenActivity
+
+cnbc:
+  - com.cnbc.client/com.cnbc.client.activities.SplashActivity
+
+ecoflow:
+  - com.ecoflow/com.ecoflow.iot.ui.activity.SplashActivity
+
+eurospin:
+  - it.eurospin.mobileapp/it.eurospin.mobileapp.MainActivity
+
+npm_mobile:
+  - com.manan.npm_phone_app/com.manan.npm_phone_app.MainActivity
+
+rotation:
+  - com.pranavpandey.rotation/com.pranavpandey.rotation.activity.SplashActivity
+
+tripeaks_neue:
+  - io.github.mimoguz.tripeaksneue/io.github.mimoguz.tripeaksneue.MainActivity
+
+ente:
+  - io.ente.photos/io.ente.photos.IconGreen
+
+nowtv:
+  - com.nowtv.it/com.nowtv.startup.StartupActivity
+
+trail_sense:
+  - com.kylecorry.trail_sense.dev/com.kylecorry.trail_sense.main.MainActivity
+
+cake_monero:
+  - com.monero.app/com.cakewallet.cake_wallet.MainActivity
