--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -102,3 +102,18 @@ trail_sense:
 
 cake_monero:
   - com.monero.app/com.cakewallet.cake_wallet.MainActivity
+
+ddns_updater:
+  - xyz.philei.ddnsupdater/xyz.philei.ddnsupdater.MainActivity
+
+flying_carpet:
+  - dev.spiegl.flyingcarpet/dev.spiegl.flyingcarpet.MainActivity
+
+jigsaw:
+  - io.gitlab.derjosef.jigsaw/com.godot.game.GodotApp
+
+pixel_launcher_enhanced:
+  - com.drdisagree.pixellauncherenhanced/com.drdisagree.pixellauncherenhanced.ui.activities.SplashActivity
+
+yacguide:
+  - com.yacgroup.yacguide/com.yacgroup.yacguide.LaunchActivity
