--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -117,3 +117,7 @@ pixel_launcher_enhanced:
 
 yacguide:
   - com.yacgroup.yacguide/com.yacgroup.yacguide.LaunchActivity
+  - com.yacgroup.yacguide.dev/com.yacgroup.yacguide.LaunchActivity
+
+weverse:
+  - co.benx.weverse/co.benx.weverse.home.MainActivityAlias
