Add icon for Bupa

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -121,3 +121,7 @@ yacguide:
 
 weverse:
   - co.benx.weverse/co.benx.weverse.home.MainActivityAlias
+
+bupa:
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.tffgeixshqsc
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.vpqtlxhoojpq
