--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -121,3 +121,20 @@ yacguide:
 
 weverse:
   - co.benx.weverse/co.benx.weverse.home.MainActivityAlias
+
+dba:
+  - dk.dba.android/com.schibsted.nmp.NmpActivity
+  
+dr_nyheder:
+  - dk.dr.drnyheder/dk.dr.drnyheder.MainActivity
+  
+kørekort:
+  - dk.digst.mdl/dk.digst.mdl.Launcher
+
+min_læge:
+  - com.trifork.minlaege/com.trifork.minlaege.activities.BootStrapActivity
+
+rejsekort:
+  - dk.rejsekort.digitalrejsekort/com.fairtiq.androidkit.signup.StartupActivity
+
+rejsekort_alt_1: {}
