--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -128,10 +128,10 @@ dba:
 dr_nyheder:
   - dk.dr.drnyheder/dk.dr.drnyheder.MainActivity
   
-kørekort:
+koerekort:
   - dk.digst.mdl/dk.digst.mdl.Launcher
 
-min_læge:
+min_laege:
   - com.trifork.minlaege/com.trifork.minlaege.activities.BootStrapActivity
 
 rejsekort:
