--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -121,7 +121,25 @@ yacguide:
 
 weverse:
   - co.benx.weverse/co.benx.weverse.home.MainActivityAlias
+  
+dba:
+  - dk.dba.android/com.schibsted.nmp.NmpActivity
+  
+dr_nyheder:
+  - dk.dr.drnyheder/dk.dr.drnyheder.MainActivity
+  
+koerekort:
+  - dk.digst.mdl/dk.digst.mdl.Launcher
+
+min_laege:
+  - com.trifork.minlaege/com.trifork.minlaege.activities.BootStrapActivity
+
+rejsekort:
+  - dk.rejsekort.digitalrejsekort/com.fairtiq.androidkit.signup.StartupActivity
+
+rejsekort_alt_1: {}
 
 bupa:
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.tffgeixshqsc
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.vpqtlxhoojpq
+  
