--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -142,4 +142,6 @@ rejsekort_alt_1: {}
 bupa:
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.tffgeixshqsc
   - bupa.ProviderFinder/crc64bd4f42d567ec1d59.vpqtlxhoojpq
-  
+
+consignaction:
+  - ca.consignaction.app/ca.consignaction.app.MainActivity
