--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -145,3 +145,39 @@ bupa:
 
 consignaction:
   - ca.consignaction.app/ca.consignaction.app.MainActivity
+
+bankwest:
+  - au.com.bankwest.mobile/au.com.bankwest.mobile.activity.AppLaunchActivity
+
+calorie_carb_fat_counter:
+  - digifit.virtuagym.foodtracker/digifit.virtuagym.foodtracker.presentation.screen.main.MainActivity
+
+credit_digital_card_wallet:
+  - com.sidhant.wallet/com.sidhant.wallet.MainActivity
+
+floating_mute:
+  - com.github.mkalmousli.floating_mute/com.github.mkalmousli.floating_mute.MainActivity
+
+lingq:
+  - com.linguist/com.lingq.ui.MainActivity
+
+mysubaru:
+  - com.subaru.telematics.app.remote/com.subaru.telematics.app.remote.MainActivity
+
+parcel:
+  - dev.itsvic.parceltracker/dev.itsvic.parceltracker.MainActivity
+
+pixel_bookmarks:
+  - com.psh.pixel_bookmarks/com.psh.pixel_bookmarks.MainActivity
+
+purrrr:
+  - com.hello.purr/com.hellobike.atlas.business.portal.PortalActivity
+
+timebox_timer:
+  - de.kempmobil.timer/de.kempmobil.timebox.MainActivity
+
+war_thunder_mobile:
+  - com.gaijingames.wtm/com.gaijingames.wtm.VersionSelector
+
+xportal:
+  - com.elrond.maiar.wallet/com.maiar2.MainActivity
