--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -181,3 +181,15 @@ war_thunder_mobile:
 
 xportal:
   - com.elrond.maiar.wallet/com.maiar2.MainActivity
+
+ca_dmv_wallet:
+  - com.DMV.DMV/gov.ca.dmv.MainActivity
+
+mcdelivery:
+  - tw.com.mcdonalds.delivery/sg.com.steria.mcdonalds.activity.home.StartupActivity
+
+encode:
+  - com.upskew.encode/com.upskew.encode.MainActivity
+
+toogoodtogo:
+  - com.app.tgtg/com.app.tgtg.feature.login.SplashActivity
