--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+klook:
+    - com.klook/com.klooklib.MainActivity
