--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,30 @@ veracash:
 
 vocat:
   - kr.co.devstory.vocat/kr.co.devstory.vocat.MainActivity
+
+talabat:
+  - com.talabat/com.talabat.FlutterLandingScreen
+
+ikea_home_smart:
+  - com.ikea.inter.homesmart.system2/com.ikea.system2.start.StartActivity
+
+walmart:
+  - com.walmart.mg/com.walmart.glass.integration.splash.SplashActivity
+
+root_checker:
+  - com.joeykrim.rootcheckp/com.joeykrim.rootcheckp.MainActivity
+
+opera:
+  - com.opera.browser/com.opera.Launcher4
+
+anymex:
+  - com.ryan.anymex/com.ryan.anymex.MainActivity
+
+securify:
+  - io.github.rabehx.securify/io.github.rabehx.securify.ui.activity.MainActivity
+
+nextbike:
+  - de.nextbike/app.tier.MainActivity
+
+dm:
+  - de.dm.meindm.android/de.dm.meindm.android.StartActivity
