Add icons&compinfo (#1149)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,63 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+cashi:
+  - com.walmartmexico.wallet/com.wallet.bcg.ewallet.splash.SplashActivity
+
+dsucontroller:
+  - com.dsucontroller/com.dsucontroller.MainActivity
+
+jioaicloud:
+  - jio.cloud.drive/com.rjil.cloud.tej.client.app.AppStartActivity
+
+linkguardian:
+  - dev.elbullazul.linkguardian/dev.elbullazul.linkguardian.MainActivity
+
+lotus_smartime:
+  - com.lotus.smartime2/com.wear.lib_core.mvp.view.activity.SplashActivity
+
+mo_co:
+  - com.supercell.moco/com.supercell.moco.GameApp
+
+pbs_kids_video:
+  - org.pbskids.video/org.pbskids.video.ui.root.MainActivity
+
+superenalotto_verifica_vincite:
+  - com.game360.superenalotto_info/com.game360.superenalotto_info.MainActivity
+
+superx:
+  - com.myAllVideoBrowser/com.myAllVideoBrowser.ui.main.home.MainActivity
+
+veracash:
+  - com.veracash.app/com.veracash.app.features.splashScreen.view.SplashScreenActivity
+
+vocat:
+  - kr.co.devstory.vocat/kr.co.devstory.vocat.MainActivity
+
+talabat:
+  - com.talabat/com.talabat.FlutterLandingScreen
+
+ikea_home_smart:
+  - com.ikea.inter.homesmart.system2/com.ikea.system2.start.StartActivity
+
+walmart:
+  - com.walmart.mg/com.walmart.glass.integration.splash.SplashActivity
+
+root_checker:
+  - com.joeykrim.rootcheckp/com.joeykrim.rootcheckp.MainActivity
+
+opera:
+  - com.opera.browser/com.opera.Launcher4
+
+anymex:
+  - com.ryan.anymex/com.ryan.anymex.MainActivity
+
+securify:
+  - io.github.rabehx.securify/io.github.rabehx.securify.ui.activity.MainActivity
+
+nextbike:
+  - de.nextbike/app.tier.MainActivity
+
+dm:
+  - de.dm.meindm.android/de.dm.meindm.android.StartActivity
