add 8 new icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,26 @@ dm:
 
 klook:
   - com.klook/com.klooklib.MainActivity
+  
+dbs_india:
+  - com.dbs.in.digitalbank/com.dbs.in.digitalbank.ui.splash.SplashActivity
+  
+honda_connect:
+  - com.hcil.connectedcars.HCILConnectedCars/com.hcil.connectedcars.HCILConnectedCars.features.splash.SplashActivity
+  
+islands_of_argenta:
+  - com.sangonzaloarts.islandsofargenta/com.sangonzaloarts.islandsofargenta.MainActivity
+  
+superlive_plus:
+  - com.tvt.superliveplus/com.tvt.launch.MainActivity
+  
+the_hindu:
+  - com.mobstac.thehindu/com.mobstac.thehindu.MainActivity
+  
+the_hindu_epaper:
+  - com.epaper.thehindu.android/com.epaper.thehindu.android.app.activities.SplashScreen
+  
+epathshala:
+  - in.gov.epathshala/in.gov.epathshala.activity.SplashActivity
+  
+islands_of_argenta_alt_1: {}
