add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,18 @@ dm:
 
 klook:
   - com.klook/com.klooklib.MainActivity
+
+betteruntis:
+  - com.sapuseven.untis/com.sapuseven.untis.activities.MainActivity
+
+electric_love_festival:
+  - com.appmiral.electriclovefestival/com.appmiral.splash.SplashActivity
+
+fahrschule_zebra:
+  - at.mmmsoftware.ZebraApp/at.mmmsoftware.ZebraApp.MainActivity
+
+mein_hot:
+  - com.austrianapps.ventocom.hofer/com.austrianapps.ventocom.hofer.MainActivity
+
+s_pass_salzburger:
+  - com.schubec.projects.spass.jugendkarte/com.schubec.projects.spass.jugendkarte.MainActivity
