Add icon for Octopus Group

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,6 @@ dm:
 
 klook:
   - com.klook/com.klooklib.MainActivity
+
+octopus_group:
+  - au.com.octopusgroup.membersportalv2/au.com.octopusgroup.membersportalv2.MainActivity
