--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,21 @@ mein_hot:
 
 s_pass_salzburger:
   - com.schubec.projects.spass.jugendkarte/com.schubec.projects.spass.jugendkarte.MainActivity
+
+essential_space:
+  - com.nothing.ntessentialspace/com.nothing.ntessentialspace.MainActivity
+
+kreate:
+  - me.knighthat.kreate/it.fast4x.rimusic.MainActivity
+
+pomodorot:
+  - app.pomodorot/com.godot.game.GodotApp
+
+simba_droid:
+  - de.buttercookie.simbadroid/de.buttercookie.simbadroid.MainActivity
+
+tos_dr:
+  - xyz.ptgms.tosdr/xyz.ptgms.tosdr.MainActivity
+
+urnetwork:
+  - com.bringyour.network/com.bringyour.network.LoginActivity
