--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -108,3 +108,6 @@ tos_dr:
 
 urnetwork:
   - com.bringyour.network/com.bringyour.network.LoginActivity
+
+nothing_x:
+  - com.nothing.smartcenter/com.nothing.smartcenter.host.MainActivity
