--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -76,5 +76,41 @@ dm:
 klook:
   - com.klook/com.klooklib.MainActivity
 
+betteruntis:
+  - com.sapuseven.untis/com.sapuseven.untis.activities.MainActivity
+
+electric_love_festival:
+  - com.appmiral.electriclovefestival/com.appmiral.splash.SplashActivity
+
+fahrschule_zebra:
+  - at.mmmsoftware.ZebraApp/at.mmmsoftware.ZebraApp.MainActivity
+
+mein_hot:
+  - com.austrianapps.ventocom.hofer/com.austrianapps.ventocom.hofer.MainActivity
+
+s_pass_salzburger:
+  - com.schubec.projects.spass.jugendkarte/com.schubec.projects.spass.jugendkarte.MainActivity
+
+essential_space:
+  - com.nothing.ntessentialspace/com.nothing.ntessentialspace.MainActivity
+
+kreate:
+  - me.knighthat.kreate/it.fast4x.rimusic.MainActivity
+
+pomodorot:
+  - app.pomodorot/com.godot.game.GodotApp
+
+simba_droid:
+  - de.buttercookie.simbadroid/de.buttercookie.simbadroid.MainActivity
+
+tos_dr:
+  - xyz.ptgms.tosdr/xyz.ptgms.tosdr.MainActivity
+
+urnetwork:
+  - com.bringyour.network/com.bringyour.network.LoginActivity
+
+nothing_x:
+  - com.nothing.smartcenter/com.nothing.smartcenter.host.MainActivity
+
 octopus_group:
   - au.com.octopusgroup.membersportalv2/au.com.octopusgroup.membersportalv2.MainActivity
