--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+beep:
+    - com.beeptopay.android/com.beeptopay.android.MainActivity
+
+go_rewards:
+    - com.calophasis.maynila/com.calophasis.maynila.MainActivity
+
+komo:
+    - ph.komo.app/ph.komo.app.ui.activity.splashscreen.SplashScreenActivity
+
+landbank:
+    - com.landbank.mobilebanking/com.landbank.mobilebanking.components.init.InitializationActivity
+
+virtual_pagibig:
+    - pagibigfund.virtualpagibigapp/crc646235c34bdb7f8a89.MainActivity
+
+rcbc:
+    - com.rcbc.pulz/com.rcbc.mobilebanking.MainActivity
+
+smtown:
+    - com.smtown.smtown.androidapp/com.smtown.smtown.androidapp.MainActivity
