Samsung Pay/Wallet default icon update

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ rcbc:
 
 smtown:
     - com.smtown.smtown.androidapp/com.smtown.smtown.androidapp.MainActivity
+
+samsung_pay:
+    - com.samsung.android.spay/com.samsung.android.spay.ui.SpayMainActivity
