added 2 new compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,9 @@ smtown:
 
 samsung_pay:
   - com.samsung.android.spay/com.samsung.android.spay.ui.SpayMainActivity
+
+cebu_pacific:
+  - com.inkglobal.cebu.android/com.inkglobal.cebu.android.booking.ui.root.auth.AuthActivity
+
+philippine_airlines:
+  - com.pal.dx/com.amadeus.mdesmdp.activities.LaunchActivity
