--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,57 @@ cebu_pacific:
 
 philippine_airlines:
   - com.pal.dx/com.amadeus.mdesmdp.activities.LaunchActivity
+
+astracrypt:
+  - com.nevidimka655.astracrypt/io.gromif.astracrypt.MainActivity
+
+auto_auto_rotate:
+  - com.jarsilio.android.autoautorotate/com.jarsilio.android.autoautorotate.MainActivity
+
+blast_off:
+  - com.ranger.blastoff/com.godot.game.GodotApp
+
+classipod:
+  - com.adeeteya.classipod/com.ryanheise.audioservice.AudioServiceActivity
+
+febbox:
+  - com.topspeed.febbox2/com.snowtop.diskpanda.view.activity.SplashActivity
+
+fold_switcher:
+  - com.eiyooooo.foldswitcher/com.eiyooooo.foldswitcher.views.MainActivity
+
+gesture_shortcut:
+  - sg.matchlab.gesturego/sg.matchlab.gesturego.app.MainActivity
+
+mbcompass:
+  - com.mubarak.mbcompass/com.mubarak.mbcompass.MainActivity
+
+mein_cosmos_direkt:
+  - de.cosmosdirekt.meincosmos/de.cosmosdirekt.meincosmos.MainActivity
+
+monterra_credit_union:
+  - com.sanmateocu.sanmateocu/com.sanmateocu.sanmateocu.MainActivity
+
+pingoff:
+  - com.jarsilio.android.pingoff/com.jarsilio.android.pingoff.MainActivity
+
+smart_scan:
+  - com.fpf.smartscan/com.fpf.smartscan.MainActivity
+
+sound_bar_remote:
+  - com.yamaha.ac.SBRemote/com.yamaha.sc.SoundBarRemote.activity.MainActivity
+
+training_peaks:
+  - com.peaksware.trainingpeaks/com.peaksware.trainingpeaks.onboarding.OnBoardingActivity
+
+trenes_argentinos:
+  - com.mininterior.trenesenvivo/com.mininterior.trenesenvivo.MainActivity
+
+xml_forge:
+  - in.hridayan.xmlforge/in.hridayan.xmlforge.activities.MainActivity
+
+zashi:
+  - co.electriccoin.zcash.foss/co.electricoin.zcash.LauncherActivity
+
+task_manager:
+  - com.rk.taskmanager/com.rk.taskmanager.MainActivity
